<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".hospital.HospitalRegister">
    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/file3"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hospital_register"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/second_color"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hospital_name_register_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hospital_name"
        app:hintTextColor="@color/second_color"
        app:boxStrokeColor="@color/second_color"
        android:layout_margin="@dimen/_10sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hospital_id_register_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hospital_id"
        app:hintTextColor="@color/second_color"
        app:boxStrokeColor="@color/second_color"
        android:layout_margin="@dimen/_10sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hospital_location_register_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:hintTextColor="@color/main_color"
        app:boxStrokeColor="@color/main_color"
        android:hint="@string/hospital_location">

        <AutoCompleteTextView
            android:id="@+id/autoComplete_hospital_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_hospital_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/second_color"
        android:onClick="hospitalHome"
        android:text="@string/register"
        android:textAllCaps="false"/>
</LinearLayout>