<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="2"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:src="@drawable/file3"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/name_app"
            android:textSize="30sp"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btn_patient"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:layout_marginTop="30dp"
        android:onClick="patient"
        android:text="@string/patient"
        android:textSize="20sp"
        android:textAllCaps="false"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:onClick="hospital"
        android:layout_marginTop="30dp"
        android:text="@string/hospital"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</LinearLayout>
