<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".hospital.HospitalLogin">
    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/file3"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hospital Login"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/second_color"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hospital_name_login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Hospital Name"
            app:hintTextColor="@color/second_color"
            app:boxStrokeColor="@color/second_color"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hospital_id_login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hospital_id"
            app:hintTextColor="@color/second_color"
            app:boxStrokeColor="@color/second_color"
           android:layout_margin="@dimen/_20sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patient_Id_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_id"
            app:hintTextColor="@color/second_color"
            app:boxStrokeColor="@color/second_color"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_hospital_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/second_color"
            android:text="Login"
            android:onClick="hospitalHome"
            android:textAllCaps="false"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_hospital_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:onClick="hospitalRegister"
            android:backgroundTint="@color/second_color"
            android:text="@string/register"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>